@@ -1,3 +1,6 @@
+5/2/12
+  Changed floating transient window behaviour to always be on top.
+
 4/2/12
   Added borders to transient windows
 
